--- a/ToDoList/app/src/main/res/values/strings.xml
+++ b/ToDoList/app/src/main/res/values/strings.xml
@@ -1,5 +1,20 @@
 <resources>
     <string name="app_name">ToDoList</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
+    <string-array name="DayOfWeek">
+        <item>Mon</item>
+        <item>Tue</item>
+        <item>Wed</item>
+        <item>Thu</item>
+        <item>Fri</item>
+        <item>Sat</item>
+        <item>Sun</item>
+    </string-array>
+    <string-array name="timeOptions">
+        <item>Hour</item>
+        <item>Minute</item>
+        <item>Day</item>
+        <item>Week</item>
+    </string-array>
 </resources>
